--- a/src/app/(dashboard)/_components/FeatureButton/FeatureButton.module.css
+++ b/src/app/(dashboard)/_components/FeatureButton/FeatureButton.module.css
@@ -1,6 +1,12 @@
 .container {
-    width: 7rem;
-    height: 7rem;
-    border: 1px solid black;
     border-radius: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 7rem;
+    width: 7rem;
+    background-color: #d9c147;
+    border: 2px solid #d1b000;
+    box-shadow: 0px 3px 5px 1px #636363;
+    margin: 0.125em;
 }
