--- a/src/app/(main)/_components/Navbar/Navbar.module.css
+++ b/src/app/(main)/_components/Navbar/Navbar.module.css
@@ -11,3 +11,14 @@
     padding: 10px;
     border-left: 1px solid gray;
 }
+
+.loginButton {
+    padding: 0.4em;
+    height: 3em;
+    width: 3.75em;
+    background-color: #d9c147;
+    border: 2px solid #d1b000;
+    box-shadow: 0px 3px 5px 1px #636363;
+    border-radius: 10px;
+    margin: 0 1em;
+}
