--- a/src/app/(dashboard)/_components/Sidebar/SideBarStyles.module.css
+++ b/src/app/(dashboard)/_components/Sidebar/SideBarStyles.module.css
@@ -1,6 +1,6 @@
 .container {
     width: 15%;
-    height: 100%;
+    height: 100vh;
     border-right: 1px solid #cfae01;
     display: flex;
     flex-direction: column;
@@ -15,8 +15,17 @@
 .logo {
     width: 100%;
     height: 2.9rem;
-    /* border: 1px solid #000; */
+    /* border: 1px solid #cfae01; */
     display: flex;
     justify-content: center;
     align-content: center;
+}
+
+.linkStyles {
+    align-content: center;
+    text-align: center;
+    height: 3rem;
+    width: 100%;
+
+    border-bottom: 1px solid #666666;
 }
