--- a/src/app/(dashboard)/_components/FeatureMain/FeaturesSection/Feature/Features/TodoList/TodoList.module.css
+++ b/src/app/(dashboard)/_components/FeatureMain/FeaturesSection/Feature/Features/TodoList/TodoList.module.css
@@ -1,6 +1,7 @@
 .todoWrapper {
     display: flex;
     flex-direction: column;
-
+    align-items: center;
     width: 85%;
+    margin-top: 2em;
 }
