--- a/src/app/(dashboard)/_components/FeatureMain/FeaturesSection/Feature/Features/TodoList/UpdateTaskForm/UpdateTaskForm.module.css
+++ b/src/app/(dashboard)/_components/FeatureMain/FeaturesSection/Feature/Features/TodoList/UpdateTaskForm/UpdateTaskForm.module.css
@@ -1,10 +1,52 @@
 .modal {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     top: 0;
-    width: 500px;
-    height: 300px;
-    border: 1px solid #a3a3a36e;
-    margin: auto;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9;
+    border: 1px solid #000;
+    background-color: #414141b0;
+}
+
+.formInput {
+    border-radius: 1em;
+    padding: 1em;
+    width: 20em;
+}
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+    gap: 0.5em;
+    margin: 1em;
+}
+
+.formSubmit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2em;
+    width: 3.75em;
+    background-color: #d9c147;
+    border: 2px solid #d1b000;
+    box-shadow: 0px 3px 5px 1px #636363;
     border-radius: 10px;
+    margin: 0.125em;
+}
+
+.closeIcon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2em;
+    width: 3.75em;
+    background-color: #d9c147;
+    border: 2px solid #d1b000;
+    box-shadow: 0px 3px 5px 1px #636363;
+    border-radius: 10px;
+    margin: 0.125em;
 }
